<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="12dp">

        <TextView
            android:id="@+id/type"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/type"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="0.34" />

        <RadioGroup
            android:id="@+id/radioType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.66"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lost"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginStart="12dp"
                android:layout_weight="0.5"
                tools:ignore="VisualLintButtonSize" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/found"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginStart="12dp"
                android:layout_weight="0.5"
                tools:ignore="VisualLintButtonSize" />

        </RadioGroup>

    </LinearLayout>

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:background="@drawable/border"
        android:hint=""
        android:inputType="text"
        android:paddingHorizontal="10dp"
        android:textSize="24sp"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/phoneInput"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:background="@drawable/border"
        android:hint=""
        android:inputType="phone"
        android:paddingHorizontal="10dp"
        android:textSize="24sp"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/descInput"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:background="@drawable/border"
        android:hint=""
        android:inputType="text"
        android:paddingTop="10dp"
        android:paddingHorizontal="10dp"
        android:textSize="24sp"
        android:gravity="start"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/dateInput"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:background="@drawable/border"
        android:hint=""
        android:inputType="date"
        android:paddingHorizontal="10dp"
        android:textSize="24sp"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/locationInput"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="32dp"
        android:autofillHints=""
        android:background="@drawable/border"
        android:hint=""
        android:inputType="text"
        android:paddingHorizontal="10dp"
        android:textSize="24sp"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:text="@string/save"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>